# lib_pprpa

./: .gitignore  README.md  pyproject.toml  setup.py
examples/in_pyscf/: gpprpa_excitation.py  hhrpa_excitation_davidson.py  jpprpa_excitation_direct.py  pprpa_excitation_davidson.py  pprpa_excitation_davidson_ao_direct.py  pprpa_excitation_davidson_use_eri.py  pprpa_excitation_direct.py  upprpa_excitation_direct.py
examples/in_pyscf/gradients/: gpprpa_grad.py  gpprpa_prop.py  gpprpa_transition_dipole.py  pprpa_geomopt.py  pprpa_geomopt_gamma.py  pprpa_grad.py  pprpa_grad_ao_direct.py  pprpa_grad_gamma.py  pprpa_grad_use_eri.py  pprpa_prop.py
examples/in_pyscf/oscillator_strength/: gs_dipole.py  hhrpa_osc_strength.py  pprpa_osc_strength.py
examples/in_pyscf/oscillator_strength/pbc/: 3A2-geo.POSCAR.vasp  cherrypick.py  combined_results.npz  dipole_difference.py  hh.npz  hh_pbc_setup.py  pbc_hhRPA_osc_plot.py  pbc_ppRPA_osc_plot.py  pp.npz  pp_pbc_setup.py
lib_pprpa/: analyze.py  epr_utils.py  gpprpa_davidson.py  gpprpa_direct.py  gsc.py  nto.py  pprpa_davidson.py  pprpa_direct.py  pprpa_util.py  pprpaw_direct.py  pyscf_util.py  upprpa_direct.py  upprpa_frac.py  upprpaw_direct.py
lib_pprpa/grad/: ase_utils.py  gpprpa.py  grad_utils.py  pprpa.py  pprpa_gamma.py
lib_pprpa/screening/: pprpaw_direct.py  upprpaw_direct.py
tests/: test_osc_strength.py
